@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-14T00:30:56Z",
-  "count" : 423,
-  "count_minmax" : [ 154, 423 ],
-  "count_decinc" : [ -0, +423 ],
+  "timestamp" : "2022-08-14T08:06:35Z",
+  "count" : 427,
+  "count_minmax" : [ 154, 427 ],
+  "count_decinc" : [ -0, +427 ],
   "uniques" : 20,
   "uniques_minmax" : [ 15, 20 ],
   "uniques_decinc" : [ -0, +20 ]
