@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-08-14T08:06:35Z",
-  "count" : 93,
-  "count_minmax" : [ 93, 175 ],
-  "count_decinc" : [ -82, +175 ],
+  "count" : 120,
+  "count_minmax" : [ 120, 120 ],
+  "count_decinc" : [ -0, +120 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
