@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-08-14T00:30:56Z",
+  "timestamp" : "2022-08-14T08:06:35Z",
   "count_outdated" : 49654,
   "uniques_outdated" : 753,
-  "count" : 53507,
-  "uniques" : 878,
+  "count" : 53556,
+  "uniques" : 879,
   "clones" : [
     {
       "timestamp": "2022-07-31T00:00:00Z",
-      "count": 168,
-      "count_minmax": [ 168, 175 ],
+      "count": 93,
+      "count_minmax": [ 93, 175 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -98,10 +98,17 @@
     },
     {
       "timestamp": "2022-08-13T00:00:00Z",
-      "count": 423,
-      "count_minmax": [ 154, 423 ],
+      "count": 427,
+      "count_minmax": [ 154, 427 ],
       "uniques": 20,
       "uniques_minmax": [ 15, 20 ]
+    },
+    {
+      "timestamp": "2022-08-14T00:00:00Z",
+      "count": 120,
+      "count_minmax": [ 120, 120 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
