@@ -1,10 +1,10 @@
 {
-  "count": 3853,
+  "count": 3902,
   "uniques": 63,
   "clones": [
     {
       "timestamp": "2022-07-31T00:00:00Z",
-      "count": 168,
+      "count": 93,
       "uniques": 1
     },
     {
@@ -69,8 +69,13 @@
     },
     {
       "timestamp": "2022-08-13T00:00:00Z",
-      "count": 423,
+      "count": 427,
       "uniques": 20
+    },
+    {
+      "timestamp": "2022-08-14T00:00:00Z",
+      "count": 120,
+      "uniques": 1
     }
   ]
 }
